Server: Removed some unused code and removed some causes for warnings from FindBugs.